--- a/113306084_HW5.html
+++ b/113306084_HW5.html
@@ -57,10 +57,10 @@
       <section class="favorite-music">
         <h2>Favorite Music</h2>
         <div class="music-gallery">
-          <a href="https://www.youtube.com/watch?v=dOTvy7kcn78" target="_blank"><img src="3146788_youtube_logo_icon (1).png" alt="Album 1"></a>
-          <a href="https://www.youtube.com/watch?v=3bBpiHJm3t0" target="_blank"><img src="3146788_youtube_logo_icon (1).png" alt="Album 2"></a>
-          <a href="https://www.youtube.com/watch?v=31aBzZokJMA" target="_blank"><img src="3146788_youtube_logo_icon (1).png" alt="Album 3"></a>
-          <a href="https://www.youtube.com/watch?v=MuhkUzGAeHA" target="_blank"><img src="3146788_youtube_logo_icon (1).png" alt="Album 4"></a>
+          <a href="https://www.youtube.com/watch?v=dOTvy7kcn78" target="_blank"><img src="3146788_youtube_logo_icon (1).png" alt="Album 1"><p style="text-align: center;">Overfly</p></a>
+          <a href="https://www.youtube.com/watch?v=3bBpiHJm3t0" target="_blank"><img src="3146788_youtube_logo_icon (1).png" alt="Album 2"><p style="text-align: center;">Moonlight</p></a>
+          <a href="https://www.youtube.com/watch?v=31aBzZokJMA" target="_blank"><img src="3146788_youtube_logo_icon (1).png" alt="Album 3"><p style="text-align: center;">God Knows</p></a>
+          <a href="https://www.youtube.com/watch?v=MuhkUzGAeHA" target="_blank"><img src="3146788_youtube_logo_icon (1).png" alt="Album 4"><p style="text-align: center;">Butterfly</p></a>
         </div>
         <p class="music-note">Note: I love anime so i choose these songs!</p>
       </section>
